--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,22 +8,22 @@
 
     <ImageView
         android:id="@+id/imageselector"
-        android:layout_width="150dp"
+        android:layout_width="300dp"
         android:layout_height="150dp"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="120dp"
+        android:layout_marginLeft="50dp"
         android:layout_marginBottom="10dp"
         android:scaleType="fitXY"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="ContentDescription,MissingConstraints,RtlHardcoded" />
 
     <Button
         android:id="@+id/buttonselector"
         android:layout_below="@+id/imageselector"
         android:layout_width="307dp"
-        android:layout_height="42dp"
-        android:layout_marginLeft="30dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="45dp"
         android:text="select image"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="HardcodedText,MissingConstraints,RtlHardcoded" />
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_below="@+id/buttonselector"
@@ -32,7 +32,8 @@
      tools:ignore="MissingConstraints">
      <ScrollView
          android:layout_width="match_parent"
-         android:layout_height="match_parent">
+         android:layout_height="match_parent"
+         tools:ignore="UselessParent">
          <TextView
              android:id="@+id/textresult"
              android:layout_width="match_parent"
